--- a/dashboard.html
+++ b/dashboard.html
@@ -16,9 +16,9 @@
       
       <img class="image" src="image/backgif.gif" alt="Radiation trend line 1" />
       <div class="rectangle"></div>
-      <div class="text-wrapper">Home</div>
+      <div class="text-wrapper"><a href="index.html">Home</a></div>
       <div class="div">Outer Base</div>
-      <div class="text-wrapper-2">Inner Base</div>
+      <div class="text-wrapper-2"><a href="index.html">Inner Base</a></div>
       <div class="rectangle-2"></div>
       <div class="text-wrapper-3">Cryonix</div>
       <div class="lat-lon">Lat: 3.6608°&nbsp;&nbsp;Lon: 138.12731°</div>
